# fs-audit

./: .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml  roots.example.txt  scanner.py
gui/: template.html
strata/: __main__.py  config.py  neardup.py  scanner.py  template.html
tests/: test_scanner.py
