[project]
name = "fs-audit"
version = "0.2.1"
description = "Read-only filesystem auditor with a visual dashboard — finds duplicate, large, and old files."
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# strata/ is executed as a directory (python strata) or a zipapp, so its modules
# are top-level in both. Put it on the path so tests import them the same way.
pythonpath = ["strata"]
